Issue #4 Support pip distribution
- Restructure file locations to support pip distribution
- Update files to support pip packaging

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-* regfmt 0.1.0
+* regfmt
 This project is a *work in progress*.
 
 *regfmt* is a command line utility to generate SVG diagrams for control register-style data formats. It is inspired by the /dformat/ command from the /troff/ family of tools, however re-imagined using contemporary file formats.
@@ -215,7 +215,6 @@ The following CSS selectors supported by *regfmt* are described below.
 *** body
 | Property       | Type          | Default Value | Description                                                                                                                                                                                          |
 |----------------+---------------+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-|                |               |               | <20>                                                                                                                                                                                                 |
 | font-family    | <[[https://w3c.github.io/csswg-drafts/css-fonts/#family-name-value][family name]]> | Helvetica     | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-family][font-family]] attribute indicates which font family will be used to render the text, specified as a prioritized list of font family names and/or generic family names.                             |
 | font-size      | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#length][length]]>      | 12pt          | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-size][font-size]] attribute refers to the size of the font from baseline to baseline when multiple lines of text are set solid in a multiline layout environment. Note only 'pt' is supported by *regfmt*. |
 | font-style     | [[#FontStyle][FontStyle]]     | normal        | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-size][font-style]] attribute specifies whether the text is to be rendered using a normal, italic, or oblique face.                                                                                       |
@@ -228,34 +227,33 @@ The following CSS selectors supported by *regfmt* are described below.
 
 
 *** register, field
-| Property       | Type          | Default Value | Description                                                                                                                                                              |
-|----------------+---------------+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| fill           | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#paint][paint]]>       | black         | Presentation attribute that [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/fill][defines]] the color used to paint the element.                                                                                                                             |
-| stroke         | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#paint][paint]]>       | black         | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke][stroke]] attribute is a presentation attribute defining the color (or any SVG paint servers like gradients or patterns) used to paint the outline of the shape.                                    |
-| stroke-width   | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#length][length]]>      | 1px           | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-width][stroke-width]] attribute is a presentation attribute defining the width of the stroke to be applied to the shape.                                                                                  |
-| stroke-linecap | [[#StrokeLinecap][StrokeLinecap]] | butt          | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-linecap][stroke-linecap]] attribute is a presentation attribute defining the shape to be used at the end of open subpaths when they are stroked.                                                            |
+| Property       | Type          | Default Value | Description                                                                                                                                                       |
+|----------------+---------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| fill           | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#paint][paint]]>       | black         | Presentation attribute that [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/fill][defines]] the color used to paint the element.                                                                                          |
+| stroke         | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#paint][paint]]>       | black         | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke][stroke]] attribute is a presentation attribute defining the color (or any SVG paint servers like gradients or patterns) used to paint the outline of the shape. |
+| stroke-width   | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#length][length]]>      | 1px           | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-width][stroke-width]] attribute is a presentation attribute defining the width of the stroke to be applied to the shape.                                               |
+| stroke-linecap | [[#StrokeLinecap][StrokeLinecap]] | butt          | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-linecap][stroke-linecap]] attribute is a presentation attribute defining the shape to be used at the end of open subpaths when they are stroked.                         |
 
 *** register-name, field-name, field-index
-| Property       | Type          | Default Value | Description                                                                                                                                                              |
-|----------------+---------------+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| font-family    | <[[https://w3c.github.io/csswg-drafts/css-fonts/#family-name-value][family name]]> | Helvetica     | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-family][font-family]] attribute indicates which font family will be used to render the text, specified as a prioritized list of font family names and/or generic family names.                             |
-| font-size      | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#length][length]]>      | 12pt          | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-size][font-size]] attribute refers to the size of the font from baseline to baseline when multiple lines of text are set solid in a multiline layout environment. Note only 'pt' is supported by *regfmt*. |
-| font-style     | [[#FontStyle][FontStyle]]     | normal        | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-size][font-style]] attribute specifies whether the text is to be rendered using a normal, italic, or oblique face.                                                                                       |
-| font-weight    | [[#FontWeight][FontWeight]]    | normal        | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-weight][font-weight]] attribute refers to the boldness or lightness of the glyphs used to render the text, relative to other fonts in the same font family.                                                |
-| fill           | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#paint][paint]]>       | black         | Presentation attribute that [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/fill][defines]] the color used to paint the element.                                                                                                                             |
+| Property    | Type          | Default Value | Description                                                                                                                                                                                          |
+|-------------+---------------+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| font-family | <[[https://w3c.github.io/csswg-drafts/css-fonts/#family-name-value][family name]]> | Helvetica     | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-family][font-family]] attribute indicates which font family will be used to render the text, specified as a prioritized list of font family names and/or generic family names.                             |
+| font-size   | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#length][length]]>      | 12pt          | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-size][font-size]] attribute refers to the size of the font from baseline to baseline when multiple lines of text are set solid in a multiline layout environment. Note only 'pt' is supported by *regfmt*. |
+| font-style  | [[#FontStyle][FontStyle]]     | normal        | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-size][font-style]] attribute specifies whether the text is to be rendered using a normal, italic, or oblique face.                                                                                       |
+| font-weight | [[#FontWeight][FontWeight]]    | normal        | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/font-weight][font-weight]] attribute refers to the boldness or lightness of the glyphs used to render the text, relative to other fonts in the same font family.                                                |
+| fill        | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#paint][paint]]>       | black         | Presentation attribute that [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/fill][defines]] the color used to paint the element.                                                                                                                             |
 
 *** field-name-line
-| Property       | Type          | Default Value | Description                                                                                                                                                              |
-|----------------+---------------+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| stroke         | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#paint][paint]]>       | black         | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke][stroke]] attribute is a presentation attribute defining the color (or any SVG paint servers like gradients or patterns) used to paint the outline of the shape.                                    |
-| stroke-width   | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#length][length]]>      | 1px           | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-width][stroke-width]] attribute is a presentation attribute defining the width of the stroke to be applied to the shape.                                                                                  |
-| stroke-linecap | [[#StrokeLinecap][StrokeLinecap]] | butt          | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-linecap][stroke-linecap]] attribute is a presentation attribute defining the shape to be used at the end of open subpaths when they are stroked.                                                            |
+| Property       | Type          | Default Value | Description                                                                                                                                                       |
+|----------------+---------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| stroke         | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#paint][paint]]>       | black         | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke][stroke]] attribute is a presentation attribute defining the color (or any SVG paint servers like gradients or patterns) used to paint the outline of the shape. |
+| stroke-width   | <[[https://developer.mozilla.org/en-US/docs/Web/SVG/Content_type#length][length]]>      | 1px           | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-width][stroke-width]] attribute is a presentation attribute defining the width of the stroke to be applied to the shape.                                               |
+| stroke-linecap | [[#StrokeLinecap][StrokeLinecap]] | butt          | The [[https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-linecap][stroke-linecap]] attribute is a presentation attribute defining the shape to be used at the end of open subpaths when they are stroked.                         |
 
 ** Enumerations
 *** StrokeLinecap
 | Value  | Description                                                                                                                                                                                             |
 |--------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-|        | <40>                                                                                                                                                                                                    |
 | butt   | The butt value indicates that the stroke for each subpath does not extend beyond its two endpoints.                                                                                                     |
 | square | The square value indicates that at the end of each subpath the stroke will be extended by a rectangle with a width equal to half the width of the stroke and a height equal to the width of the stroke. |
 | round  | The round value indicates that at the end of each subpath the stroke will be extended by a half circle with a diameter equal to the stroke width.                                                       |
